NOBUG: Remove unused code/routes.
