# api/swagger/swagger.yaml
@@ -1997,213 +1997,6 @@ paths:
             $ref: "#/definitions/Error"
 
 ###
-### Search BCGW Routes
-###
-  /public/search/bcgw/crownLandsId/{crownLandsId}:
-    x-swagger-router-controller: search
-    options:
-      tags:
-        - search
-      summary: "Pre-flight request"
-      operationId: protectedOptions
-      description: "Options on 'Search BCGW by Crown Lands ID' route"
-      parameters:
-        - name: crownLandsId
-          in: path
-          description: "Crown Lands ID of Crown Lands object(s) to get"
-          required: true
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    get:
-      tags:
-        - search
-      summary: "Search BCGW by Crown Lands ID"
-      operationId: publicGetBCGW
-      description: "Retrieve Crown Lands objects from the BCGW"
-      parameters:
-        - name: crownLandsId
-          in: path
-          description: "Crown Lands ID of object(s) to get"
-          required: true
-          type: string
-        - in: query
-          name: fields
-          description: "Search fields to return"
-          required: false
-          type: array
-          collectionFormat: pipes
-          items:
-            type: string
-            enum: *searchFields
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-  /public/search/bcgw/getClientsInfoByDispositionId/{dtId}:
-    x-swagger-router-controller: search
-    options:
-      tags:
-        - search
-      summary: "Pre-flight request"
-      operationId: protectedOptions
-      description: "Options on 'Search BCGW Client Info by Disposition ID' route"
-      parameters:
-        - name: dtId
-          in: path
-          description: "Disposition Transaction ID to get client info about"
-          required: true
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    get:
-      tags:
-        - search
-      summary: "Search BCGW Client Info by Disposition ID"
-      operationId: publicGetClientsInfoByDispositionId
-      description: "Retrieve Client Info objects from the BCGW"
-      parameters:
-        - name: dtId
-          in: path
-          description: "Disposition Transaction ID get client info about"
-          required: true
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-  /public/search/bcgw/dispositionTransactionId/{dtId}:
-    x-swagger-router-controller: search
-    options:
-      tags:
-        - search
-      summary: "Pre-flight request"
-      operationId: protectedOptions
-      description: "Options on 'Search BCGW by Disposition Transaction ID' route"
-      parameters:
-        - name: dtId
-          in: path
-          description: "Disposition Transaction ID of Tantalis object(s) to get"
-          required: true
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    get:
-      tags:
-        - search
-      summary: "Search BCGW by Disposition Transaction ID"
-      operationId: publicGetBCGWDispositionTransactionId
-      description: "Retrieve Tantalis objects from the BCGW"
-      parameters:
-        - name: dtId
-          in: path
-          description: "Disposition Transaction ID of Tantalis object(s) to get"
-          required: true
-          type: string
-        - in: query
-          name: fields
-          description: "Search fields to return"
-          required: false
-          type: array
-          collectionFormat: pipes
-          items:
-            type: string
-            enum: *searchFields
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-  /public/search/dispositionTransactionId/{dtId}:
-    x-swagger-router-controller: search
-    options:
-      tags:
-        - search
-      summary: "Pre-flight request"
-      operationId: protectedOptions
-      description: "Options on 'Get Features by Disposition Transaction ID' route"
-      parameters:
-        - name: dtId
-          in: path
-          description: "Disposition Transaction ID of Tantalis object(s) to get"
-          required: true
-          type: string
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-    get:
-      tags:
-        - search
-      summary: "Get a list of Features by Disposition Transaction ID"
-      operationId: publicGetDispositionTransactionId
-      description: "Retrieve Feature objects from local database"
-      parameters:
-        - name: dtId
-          in: path
-          description: "Disposition Transaction ID of Features to get"
-          required: true
-          type: string
-        - in: query
-          name: fields
-          description: "Search fields to return"
-          required: false
-          type: array
-          collectionFormat: pipes
-          items:
-            type: string
-            enum: *searchFields
-      responses:
-        "200":
-          description: "Success"
-          schema:
-            $ref: "#/definitions/Search"
-        "403":
-          description: "Access Denied"
-          schema:
-            $ref: "#/definitions/Error"
-
-###
 ### Search Tantalis Routes
 ###
   /ttlsapi/dispositionTransactionId/{dtId}:
